noinst_LTLIBRARIES = libzlib.la

libzlib_la_SOURCES = Fradler32.c Frcompress.c Frcrc32.c Frdeflate.c \
	Frinfblock.c Frinfcodes.c Frinffast.c Frinflate.c Frinftrees.c \
	Frinfutil.c Frtrees.c Fruncompr.c Frzutil.c Frdeflate.h Frinfcodes.h \
	Frinftrees.h Frzconf.h Frzutil.h Frinfblock.h Frinffast.h \
	Frinfutil.h Frzlib.h
